@@ -29,6 +29,7 @@ charset
 em 1 -
 hy 1 -
 \- 1 -
+rs 1 %\134
 bu 1 +\bo
 sq 2 \[]
 ru 1 _
