@@ -39,6 +39,7 @@ charset
 >	56	0	62
 @	92	3	64
 \	28	2	92
+rs	28	2	92
 or	20	2	124
 ^	33	2	195
 ~	33	2	196
